--- a/pertanyaan/cluster1.html
+++ b/pertanyaan/cluster1.html
@@ -11,7 +11,7 @@
     <div id="message" class="hidden">
         Anda sudah mengisi survei ini sebelumnya.
     </div>
-    <div class="container">
+    <div class="container1">
         <div class="course-container" id="available-container">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
             <div class="course" draggable="true">Kalkulus</div>
@@ -23,7 +23,7 @@
             <div class="course" draggable="true">Kecerdasan Buatan</div>
         </div>
         <div class="course-container" id="selected-container">
-            <h3>Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
+            <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
