--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
         <div class="content">
             <div class="typing" id="typing"></div>
             <div class="description"> <p>
-                <span>Halo, mahasiswa/i yang luar biasa!</span><br><br>
-
-                Kami mengundang Anda untuk berpartisipasi dalam survey akademik ini guna memahami pengalaman dan tantangan dalam dunia perkuliahan. Jawaban yang Anda berikan akan membantu kami dalam menyusun analisis yang lebih akurat dan bermanfaat bagi perkembangan akademik kita bersama.<br><br>
-                
-                🔹 Jawablah dengan jujur! Tidak ada jawaban benar atau salah. Opini dan pengalaman Anda sangat berarti.<br>
-                🔹 Privasi Anda dijamin aman. Semua data yang dikumpulkan akan dirahasiakan dan hanya digunakan untuk keperluan penelitian tanpa mengungkap identitas pribadi.<br><br>
-                
-                Terima kasih atas waktu dan kontribusi Anda! Mari bersama-sama menciptakan lingkungan akademik yang lebih baik. 🚀</p>
+               <span> Halo, Mahasiswa/i IPB! </span><br> 
+               Yuk, bantu kami memahami pengalaman dan tantangan akademikmu melalui survei ini. Jawabanmu akan membantu kami dalam menyusun analisis yang lebih akurat dan bermanfaat bagi perkembangan akademik kita bersama. Jawab dengan jujur yaa dan tenang saja data kamu dijamin aman serta hanya digunakan untuk penelitian. Terima kasih atas partisipasimu! Mari ciptakan lingkungan akademik yang lebih baik. 🚀
             </div>
         </div>
         <img src="img/Home.png" alt="Profile Picture">
