--- a/pertanyaan/cluster1.html
+++ b/pertanyaan/cluster1.html
@@ -14,13 +14,13 @@
     <div class="container1">
         <div class="course-container" id="available-container">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
-            <div class="course" draggable="true">Kalkulus</div>
-            <div class="course" draggable="true">Fisika Dasar</div>
-            <div class="course" draggable="true">Algoritma</div>
-            <div class="course" draggable="true">Basis Data</div>
-            <div class="course" draggable="true">Jaringan Komputer</div>
-            <div class="course" draggable="true">Sistem Operasi</div>
-            <div class="course" draggable="true">Kecerdasan Buatan</div>
+            <div class="course" draggable="true">Biologi Dasar</div>
+            <div class="course" draggable="true">Bahasa Indonesia</div>
+            <div class="course" draggable="true">Agama</div>
+            <div class="course" draggable="true">Pertanian Inovatif</div>
+            <div class="course" draggable="true">Bahasa Inggris</div>
+            <div class="course" draggable="true">Kimia Sains dan Teknologi</div>
+            <div class="course" draggable="true">Matematika dan Berfikir Logis</div>
         </div>
         <div class="course-container" id="selected-container">
             <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
@@ -28,13 +28,13 @@
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
         <div id="questions-wrapper"></div>
         <div class="navigation">
             <button class="prev-btn" onclick="prevQuestion()">Sebelumnya</button>
             <button class="next-btn" onclick="nextQuestion()">Selanjutnya</button>
-        </div>
-        <div class="progress-bar">
-            <div class="progress"></div>
         </div>
     </div>
     
