--- a/pertanyaan/cluster1.html
+++ b/pertanyaan/cluster1.html
@@ -12,8 +12,9 @@
         Anda sudah mengisi survei ini sebelumnya.
     </div>
     <div class="container1">
+        <div class="wadah">
+        <h3>Mata Kuliah Kamu di Semester 1</h3>
         <div class="course-container" id="available-container">
-            <h3>Mata Kuliah Kamu di Semester 1</h3>
             <div class="course" draggable="true">Biologi Dasar</div>
             <div class="course" draggable="true">Bahasa Indonesia</div>
             <div class="course" draggable="true">Agama</div>
@@ -22,8 +23,11 @@
             <div class="course" draggable="true">Kimia Sains dan Teknologi</div>
             <div class="course" draggable="true">Matematika dan Berfikir Logis</div>
         </div>
-        <div class="course-container" id="selected-container">
+        </div>
+        <div class="wadah">
             <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
+        <div class="course-container" id="selected-container">
+        </div>
         </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
