--- a/pertanyaan/cluster2.html
+++ b/pertanyaan/cluster2.html
@@ -12,8 +12,9 @@
         Anda sudah mengisi survei ini sebelumnya.
     </div>
     <div class="container1">
-        <div class="course-container" id="available-container">
+        <div class="wadah">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
+        <div class="course-container" id="available-container">
             <div class="course" draggable="true">Fisika Sains Tekologi</div>
             <div class="course" draggable="true">Bahasa Indonesia</div>
             <div class="course" draggable="true">Agama</div>
@@ -22,9 +23,11 @@
             <div class="course" draggable="true">Sosiologi</div>
             <div class="course" draggable="true">Statistika dan Analisis Data</div>
         </div>
-        <div class="course-container" id="selected-container">
+        <div class="wadah">
             <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
+        <div class="course-container" id="selected-container">
         </div>
+    </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
