--- a/pertanyaan/cluster5.html
+++ b/pertanyaan/cluster5.html
@@ -12,8 +12,9 @@
         Anda sudah mengisi survei ini sebelumnya.
     </div>
     <div class="container1">
-        <div class="course-container" id="available-container">
+        <div class="wadah">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
+        <div class="course-container" id="available-container">
             <div class="course" draggable="true">Biologi Umum</div>
             <div class="course" draggable="true">Ekonomi Dasar</div>
             <div class="course" draggable="true">Pertanian Inovatif</div>
@@ -24,9 +25,12 @@
             <div class="course" draggable="true">Sosiologi</div>
             <div class="course" draggable="true">Matematika dan Berfikir Logis</div>
         </div>
+    </div>
+    <div class="wadah">
+        <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         <div class="course-container" id="selected-container">
-            <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         </div>
+    </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
