--- a/pertanyaan/cluster4.html
+++ b/pertanyaan/cluster4.html
@@ -12,6 +12,7 @@
         Anda sudah mengisi survei ini sebelumnya.
     </div>
     <div class="container1">
+        <div class="wadah">
         <div class="course-container" id="available-container">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
             <div class="course" draggable="true">Statistika dan Analisis Data</div>
@@ -22,9 +23,12 @@
             <div class="course" draggable="true">Agama</div>
             <div class="course" draggable="true">Pertanian Inovatif</div>
         </div>
+    </div>
+    <div class="wadah">
+    <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         <div class="course-container" id="selected-container">
-            <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         </div>
+    </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
