--- a/pertanyaan/cluster6.html
+++ b/pertanyaan/cluster6.html
@@ -12,8 +12,8 @@
         Anda sudah mengisi survei ini sebelumnya.
     </div>
     <div class="container1">
+        <div class="wadah"><h3>Mata Kuliah Kamu di Semester 1</h3>
         <div class="course-container" id="available-container">
-            <h3>Mata Kuliah Kamu di Semester 1</h3>
             <div class="course" draggable="true">Fisika Sains Sosial</div>
             <div class="course" draggable="true">Pertanian Inovatif</div>
             <div class="course" draggable="true">Pendidikan Pancasila</div>
@@ -23,9 +23,12 @@
             <div class="course" draggable="true">Sosiologi</div>
             <div class="course" draggable="true">Matematika dan Berfikir Logis</div>
         </div>
+    </div>
+    <div class="wadah">
+        <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         <div class="course-container" id="selected-container">
-            <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         </div>
+    </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
