--- a/pertanyaan/cluster3.html
+++ b/pertanyaan/cluster3.html
@@ -15,13 +15,13 @@
         <div class="wadah">
             <h3>Mata Kuliah Kamu di Semester 1</h3>
         <div class="course-container" id="available-container">
-            <div class="course" draggable="true">Pendidikan Kewarganegaraan</div>
-            <div class="course" draggable="true">Pendidikan Pancasila</div>
-            <div class="course" draggable="true">Statistika dan Analisis Data</div>
-            <div class="course" draggable="true">Agama</div>
+            <div class="course" draggable="true">Biologi Dasar</div>
             <div class="course" draggable="true">Fisika Sains Teknologi</div>
-            <div class="course" draggable="true">Matematika dan Berfikir Logis</div>
-            <div class="course" draggable="true">Konservasi Sumberdaya</div>
+            <div class="course" draggable="true">Bahasa Indonesia</div>
+            <div class="course" draggable="true">Bahasa Inggris</div>
+            <div class="course" draggable="true">Pertanian Inovatif</div>
+            <div class="course" draggable="true">Ekonomi</div>
+            <div class="course" draggable="true">Sosiologi</div>
         </div>
     </div>
 
