--- a/pertanyaan/cluster3.html
+++ b/pertanyaan/cluster3.html
@@ -16,7 +16,7 @@
             <h3>Mata Kuliah Kamu di Semester 1</h3>
         <div class="course-container" id="available-container">
             <div class="course" draggable="true">Biologi Dasar</div>
-            <div class="course" draggable="true">Fisika Sains Teknologi</div>
+            <div class="course" draggable="true">Kimia Sains dan Teknologi</div>
             <div class="course" draggable="true">Bahasa Indonesia</div>
             <div class="course" draggable="true">Bahasa Inggris</div>
             <div class="course" draggable="true">Pertanian Inovatif</div>
