--- a/pertanyaan/cluster2.html
+++ b/pertanyaan/cluster2.html
@@ -13,9 +13,9 @@
     </div>
     <div class="container1">
         <div class="wadah">
-            <h3>Mata Kuliah Kamu di Semester 1</h3>
+        <h3>Mata Kuliah Kamu di Semester 1</h3>
         <div class="course-container" id="available-container">
-            <div class="course" draggable="true">Fisika Sains Tekologi</div>
+            <div class="course" draggable="true">Fisika Sains Teknologi</div>
             <div class="course" draggable="true">Bahasa Indonesia</div>
             <div class="course" draggable="true">Agama</div>
             <div class="course" draggable="true">Pertanian Inovatif</div>
@@ -23,11 +23,12 @@
             <div class="course" draggable="true">Sosiologi</div>
             <div class="course" draggable="true">Statistika dan Analisis Data</div>
         </div>
+        </div>
         <div class="wadah">
             <h3>Pilih dan Taruh Mata Kuliah Yang Menurut Kamu Sulit di Semester 1</h3>
         <div class="course-container" id="selected-container">
         </div>
-    </div>
+        </div>
         <button class="button-start" onclick="showSurvey()">Isi Survey Sekarang!</button>
     </div>
     <div class="quiz-container">
