--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                 <li data-value="ST34">ST34</li>
                 <li data-value="ST35">ST35</li>
                 <li data-value="ST36">ST36</li>
+                <li data-value="ST37">ST37</li>
+                <li data-value="ST38">ST38</li>
     
                 <!-- Kelas SS -->
                 <li data-value="SS01">SS01</li>
